--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;900&display=swap');
+@import "tailwindcss";
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap');
 @import url('https://unpkg.com/leaflet@1.9.4/dist/leaflet.css');
 
-@import "tailwindcss";
+
 :root {
   --uber-black: #000000;
   --uber-white: #ffffff;
